[gd_scene load_steps=9 format=3 uid="uid://btpew2m8io0tm"]

[ext_resource type="Script" path="res://demo/scenarios/initial_scenario.gd" id="1_xr27b"]
[ext_resource type="SM64Handler" uid="uid://dssuryb827kaq" path="res://demo/sm64_resources/sm_64_handler.tres" id="2_ne7vb"]
[ext_resource type="PackedScene" uid="uid://cqv1tkr0q2m7i" path="res://demo/levels/mini_level.tscn" id="3_j27lm"]
[ext_resource type="Script" path="res://addons/libsm64-godot/mario/sm64_mario.gd" id="4_umvy3"]
[ext_resource type="PackedScene" uid="uid://b5sgdqypxdpcl" path="res://demo/shared/third_person_camera.tscn" id="5_w2846"]
[ext_resource type="Script" path="res://addons/libsm64-godot/handlers/sm6_static_surfaces_handler.gd" id="6_41tpo"]
[ext_resource type="Script" path="res://addons/libsm64-godot/handlers/sm64_surface_objects_handler.gd" id="7_ju0gc"]
[ext_resource type="PackedScene" uid="uid://dprpekyttg0g6" path="res://demo/shared/hud.tscn" id="8_f016e"]

[node name="InitialScenario" type="Node3D"]
script = ExtResource("1_xr27b")
sm64_handler = ExtResource("2_ne7vb")

[node name="MiniLevel" parent="." instance=ExtResource("3_j27lm")]

[node name="SM64Mario" type="Node3D" parent="." node_paths=PackedStringArray("camera") groups=["libsm64_mario"]]
script = ExtResource("4_umvy3")
sm64_handler = ExtResource("2_ne7vb")
camera = NodePath("ThirdPersonCamera/HorizontalAxis/VerticalAxis/Camera3D")

[node name="ThirdPersonCamera" parent="SM64Mario" instance=ExtResource("5_w2846")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25866, 0)

[node name="SM64StaticSurfacesHandler" type="Node" parent="."]
script = ExtResource("6_41tpo")
sm64_handler = ExtResource("2_ne7vb")

[node name="SM64SurfaceObjectsHandler" type="Node" parent="."]
script = ExtResource("7_ju0gc")
sm64_handler = ExtResource("2_ne7vb")

[node name="HUD" parent="." instance=ExtResource("8_f016e")]

[connection signal="tree_exiting" from="." to="." method="_on_initial_scenario_tree_exiting"]

[editable path="SM64Mario/ThirdPersonCamera"]
